--- a/mardi gras project/faq.html
+++ b/mardi gras project/faq.html
@@ -306,6 +306,142 @@
         </div> <br>
 
         <footer>
+            <div class="icons">
+                <a href="https://www.instagram.com/explore/locations/471379031/mardi-gras-new-orleans/?hl=en"
+                    target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 172 172"
+                        style=" fill:#000000;">
+                        <defs>
+                            <linearGradient x1="86" y1="17.91756" x2="86" y2="155.531" gradientUnits="userSpaceOnUse"
+                                id="color-1_43625_gr1">
+                                <stop offset="0" stop-color="#1a6dff"></stop>
+                                <stop offset="1" stop-color="#c822ff"></stop>
+                            </linearGradient>
+                            <linearGradient x1="86" y1="48.82381" x2="86" y2="122.76231" gradientUnits="userSpaceOnUse"
+                                id="color-2_43625_gr2">
+                                <stop offset="0" stop-color="#8ab4ff"></stop>
+                                <stop offset="1" stop-color="#e492ff"></stop>
+                            </linearGradient>
+                            <linearGradient x1="123.625" y1="34.26563" x2="123.625" y2="61.94419"
+                                gradientUnits="userSpaceOnUse" id="color-3_43625_gr3">
+                                <stop offset="0" stop-color="#8ab4ff"></stop>
+                                <stop offset="1" stop-color="#e492ff"></stop>
+                            </linearGradient>
+                        </defs>
+                        <g transform="">
+                            <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                                stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                                font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                                style="mix-blend-mode: normal">
+                                <path d="M0,172v-172h172v172z" fill="none"></path>
+                                <g>
+                                    <path
+                                        d="M118.25,153.1875h-64.5c-19.264,0 -34.9375,-15.6735 -34.9375,-34.9375v-64.5c0,-19.264 15.6735,-34.9375 34.9375,-34.9375h64.5c19.264,0 34.9375,15.6735 34.9375,34.9375v64.5c0,19.264 -15.6735,34.9375 -34.9375,34.9375zM53.75,24.1875c-16.29969,0 -29.5625,13.26281 -29.5625,29.5625v64.5c0,16.29969 13.26281,29.5625 29.5625,29.5625h64.5c16.29969,0 29.5625,-13.26281 29.5625,-29.5625v-64.5c0,-16.29969 -13.26281,-29.5625 -29.5625,-29.5625z"
+                                        fill="url(#color-1_43625_gr1)"></path>
+                                    <path
+                                        d="M86,120.9375c-19.264,0 -34.9375,-15.6735 -34.9375,-34.9375c0,-19.264 15.6735,-34.9375 34.9375,-34.9375c19.264,0 34.9375,15.6735 34.9375,34.9375c0,19.264 -15.6735,34.9375 -34.9375,34.9375zM86,61.8125c-13.33537,0 -24.1875,10.85213 -24.1875,24.1875c0,13.33806 10.85213,24.1875 24.1875,24.1875c13.33806,0 24.1875,-10.84944 24.1875,-24.1875c0,-13.33537 -10.84944,-24.1875 -24.1875,-24.1875z"
+                                        fill="url(#color-2_43625_gr2)"></path>
+                                    <path
+                                        d="M123.625,40.3125c-4.4528,0 -8.0625,3.6097 -8.0625,8.0625c0,4.4528 3.6097,8.0625 8.0625,8.0625c4.4528,0 8.0625,-3.6097 8.0625,-8.0625c0,-4.4528 -3.6097,-8.0625 -8.0625,-8.0625z"
+                                        fill="url(#color-3_43625_gr3)"></path>
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
+                </a>
+                <a href="https://www.facebook.com/MardiGrasNewOrleans/" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 64 64"
+                        style=" fill:#000000;">
+                        <linearGradient id="vc8QRGE7FrZm_4whYbQGXa_123743_gr1" x1="32" x2="32" y1="5.25" y2="59.38"
+                            gradientUnits="userSpaceOnUse" spreadMethod="reflect">
+                            <stop offset="0" stop-color="#1a6dff"></stop>
+                            <stop offset="1" stop-color="#c822ff"></stop>
+                        </linearGradient>
+                        <path fill="url(#vc8QRGE7FrZm_4whYbQGXa_123743_gr1)"
+                            d="M32,58C17.663,58,6,46.337,6,32S17.663,6,32,6s26,11.663,26,26S46.337,58,32,58z M32,8 C18.767,8,8,18.767,8,32s10.767,24,24,24s24-10.767,24-24S45.233,8,32,8z">
+                        </path>
+                        <linearGradient id="vc8QRGE7FrZm_4whYbQGXb_123743_gr2" x1="31.015" x2="31.015" y1="14.405"
+                            y2="49.732" gradientUnits="userSpaceOnUse" spreadMethod="reflect">
+                            <stop offset="0" stop-color="#6dc7ff"></stop>
+                            <stop offset="1" stop-color="#e6abff"></stop>
+                        </linearGradient>
+                        <path fill="url(#vc8QRGE7FrZm_4whYbQGXb_123743_gr2)"
+                            d="M34,49V34h5.001l1.03-6L34,28.019V23.93c0-1.743-0.109-2.93,2.39-2.93L40,20.999 l0.005-5.731c-0.845-0.074-2.273-0.238-4.512-0.238c-4.675,0-7.493,2.817-7.493,7.989V28h-6v6h6v15H34z">
+                        </path>
+                    </svg>
+                </a>
+                <a href="https://twitter.com/mardigrasnola?lang=en" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 172 172"
+                        style=" fill:#000000;">
+                        <defs>
+                            <linearGradient x1="86" y1="26.703" x2="86" y2="140.27406" gradientUnits="userSpaceOnUse"
+                                id="color-1_bYzsf9Bmocst_gr1">
+                                <stop offset="0" stop-color="#1a6dff"></stop>
+                                <stop offset="1" stop-color="#c822ff"></stop>
+                            </linearGradient>
+                            <linearGradient x1="104.55181" y1="26.703" x2="104.55181" y2="140.27406"
+                                gradientUnits="userSpaceOnUse" id="color-2_bYzsf9Bmocst_gr2">
+                                <stop offset="0" stop-color="#1a6dff"></stop>
+                                <stop offset="1" stop-color="#c822ff"></stop>
+                            </linearGradient>
+                            <linearGradient x1="112.875" y1="48.31856" x2="112.875" y2="57.8565"
+                                gradientUnits="userSpaceOnUse" id="color-3_bYzsf9Bmocst_gr3">
+                                <stop offset="0" stop-color="#8ab4ff"></stop>
+                                <stop offset="1" stop-color="#e492ff"></stop>
+                            </linearGradient>
+                            <linearGradient x1="86" y1="26.703" x2="86" y2="140.27406" gradientUnits="userSpaceOnUse"
+                                id="color-4_bYzsf9Bmocst_gr4">
+                                <stop offset="0" stop-color="#1a6dff"></stop>
+                                <stop offset="1" stop-color="#c822ff"></stop>
+                            </linearGradient>
+                            <linearGradient x1="104.55181" y1="26.703" x2="104.55181" y2="140.27406"
+                                gradientUnits="userSpaceOnUse" id="color-5_bYzsf9Bmocst_gr5">
+                                <stop offset="0" stop-color="#1a6dff"></stop>
+                                <stop offset="1" stop-color="#c822ff"></stop>
+                            </linearGradient>
+                            <linearGradient x1="112.875" y1="48.31856" x2="112.875" y2="57.8565"
+                                gradientUnits="userSpaceOnUse" id="color-6_bYzsf9Bmocst_gr6">
+                                <stop offset="0" stop-color="#8ab4ff"></stop>
+                                <stop offset="1" stop-color="#e492ff"></stop>
+                            </linearGradient>
+                        </defs>
+                        <g transform="translate(0.516,0.516) scale(0.994,0.994)">
+                            <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                                stroke-linejoin="none" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                                font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                                style="mix-blend-mode: normal">
+                                <g stroke="#cccccc" stroke-linejoin="round">
+                                    <path
+                                        d="M154.96394,46.45344c-3.612,5.40188 -8.03294,10.06737 -13.158,13.89169c0.02419,0.72294 0.03763,1.44856 0.03763,2.17687c0,39.28319 -30.14569,79.9155 -80.59544,79.9155c-15.38862,0 -30.401,-4.35375 -43.41656,-12.59362c-1.06156,-0.67187 -1.51575,-1.99144 -1.09381,-3.17394c0.42194,-1.17981 1.60175,-1.92425 2.85681,-1.76569c2.00219,0.24456 4.09038,0.36819 6.20275,0.36819c9.55675,0 18.68888,-2.48863 26.75944,-7.24819c-9.72875,-2.58269 -17.70256,-9.90075 -20.87919,-19.70475c-0.29025,-0.90031 -0.08869,-1.88394 0.53213,-2.59613c0.62081,-0.71219 1.55875,-1.0535 2.49937,-0.87881c0.03225,0.00537 0.0645,0.01344 0.09675,0.01881c-7.84212,-5.45831 -12.86237,-14.50175 -12.86237,-24.467v-0.31981c0,-0.946 0.49719,-1.82212 1.3115,-2.30856c0.81162,-0.48913 1.81944,-0.50525 2.65525,-0.05644c0.7525,0.4085 1.52381,0.77669 2.30856,1.10725c-3.87,-5.10625 -6.03881,-11.37619 -6.03881,-17.9525c0,-5.32125 1.41362,-10.51888 4.08231,-15.03119c0.44613,-0.75519 1.23356,-1.24431 2.107,-1.3115c0.89225,-0.06181 1.72806,0.29562 2.28438,0.97287c12.73337,15.48 31.22069,25.25713 51.13506,27.15181c-0.12094,-1.08575 -0.18006,-2.17688 -0.18006,-3.26262c0,-16.44481 13.49125,-29.82319 30.07044,-29.82319c7.77763,0 15.28919,3.01537 20.84156,8.3205c5.29169,-1.16906 10.3845,-3.17663 15.16019,-5.97431c0.95944,-0.56975 2.16881,-0.47837 3.03956,0.22306c0.87075,0.69875 1.21744,1.85706 0.87613,2.92131c-1.10725,3.42656 -2.82188,6.6005 -5.03637,9.38206c1.73612,-0.55631 3.43194,-1.204 5.08206,-1.93231c1.0965,-0.48106 2.37575,-0.18812 3.14437,0.72831c0.76862,0.91644 0.84119,2.22794 0.17737,3.22231zM144.83206,50.52769c-2.44831,0.62619 -4.95844,1.0965 -7.51694,1.41094c-1.26581,0.16394 -2.45906,-0.59663 -2.87025,-1.79794c-0.41119,-1.20669 0.07794,-2.53162 1.17175,-3.182c2.94013,-1.74419 5.45563,-4.05006 7.41481,-6.75637c-3.51794,1.44588 -7.15681,2.53162 -10.879,3.24919c-0.903,0.16931 -1.83288,-0.129 -2.46444,-0.7955c-4.62519,-4.902 -11.18806,-7.71581 -18.00625,-7.71581c-13.61756,0 -24.69544,10.96769 -24.69544,24.44819c0,1.86244 0.215,3.741 0.645,5.58194c0.19081,0.81969 -0.01344,1.68506 -0.55631,2.33275c-0.5375,0.64769 -1.31419,1.01856 -2.19569,0.95944c-21.31187,-1.07231 -41.37406,-10.56994 -55.66887,-26.23c-1.08575,2.78694 -1.65012,5.7835 -1.65012,8.83381c0,8.18344 4.10112,15.79444 10.97575,20.35781c0.99975,0.66381 1.43781,1.91081 1.07231,3.05569c-0.36281,1.14219 -1.40825,1.90006 -2.64181,1.8705c-3.14706,-0.09675 -6.30487,-0.7095 -9.32025,-1.79256c1.64475,9.87925 9.32831,17.99819 19.46825,20.01919c1.22012,0.24456 2.11506,1.29269 2.16075,2.53969c0.043,1.24431 -0.774,2.35694 -1.97531,2.6875c-2.88369,0.79013 -5.80769,1.15831 -8.80425,1.05619c4.1495,7.74806 12.27381,12.81938 21.36025,12.99406c1.1395,0.02419 2.13925,0.76325 2.49938,1.84362c0.36013,1.08038 -0.00269,2.26825 -0.903,2.967c-9.07569,7.03588 -19.75044,11.14506 -31.10781,12.00775c9.68844,4.33225 20.20194,6.58975 30.90356,6.58975c47.085,0 75.22044,-37.90181 75.22044,-74.5405c0,-1.13413 -0.03762,-2.26019 -0.09137,-3.3755c-0.043,-0.91912 0.38431,-1.79525 1.13412,-2.32469c2.64181,-1.86512 5.08744,-3.96944 7.32075,-6.29412z"
+                                        fill="url(#color-1_bYzsf9Bmocst_gr1)"></path>
+                                    <path
+                                        d="M121.38363,85.04594l5.02294,1.91081c-7.57337,19.9305 -22.89481,34.94825 -42.03787,41.19938l-1.66894,-5.10625c24.08269,-7.86631 34.572,-27.18406 38.68388,-38.00394z"
+                                        fill="url(#color-2_bYzsf9Bmocst_gr2)"></path>
+                                    <g fill="url(#color-3_bYzsf9Bmocst_gr3)">
+                                        <path
+                                            d="M107.5,53.75c0,-2.96853 2.40647,-5.375 5.375,-5.375c2.96853,0 5.375,2.40647 5.375,5.375c0,2.96853 -2.40647,5.375 -5.375,5.375c-2.96853,0 -5.375,-2.40647 -5.375,-5.375z">
+                                        </path>
+                                    </g>
+                                </g>
+                                <path d="M0,172v-172h172v172z" fill="none" stroke="none" stroke-linejoin="miter"></path>
+                                <g stroke="none" stroke-linejoin="miter">
+                                    <path
+                                        d="M154.78656,43.23113c-0.76863,-0.91644 -2.04788,-1.20938 -3.14437,-0.72831c-1.65013,0.72831 -3.34594,1.376 -5.08206,1.93231c2.2145,-2.78156 3.92912,-5.9555 5.03637,-9.38206c0.34131,-1.06425 -0.00537,-2.22256 -0.87613,-2.92131c-0.87075,-0.70144 -2.08012,-0.79281 -3.03956,-0.22306c-4.77569,2.79769 -9.8685,4.80525 -15.16019,5.97431c-5.55237,-5.30513 -13.06394,-8.3205 -20.84156,-8.3205c-16.57919,0 -30.07044,13.37837 -30.07044,29.82319c0,1.08575 0.05912,2.17687 0.18006,3.26263c-19.91437,-1.89469 -38.40169,-11.67181 -51.13506,-27.15181c-0.55631,-0.67725 -1.39213,-1.03469 -2.28438,-0.97287c-0.87344,0.06719 -1.66088,0.55631 -2.107,1.3115c-2.66869,4.51231 -4.08231,9.70994 -4.08231,15.03119c0,6.57631 2.16881,12.84625 6.03881,17.9525c-0.78475,-0.33056 -1.55606,-0.69875 -2.30856,-1.10725c-0.83581,-0.44881 -1.84362,-0.43269 -2.65525,0.05644c-0.81431,0.48644 -1.3115,1.36256 -1.3115,2.30856v0.31981c0,9.96525 5.02025,19.00869 12.86237,24.467c-0.03225,-0.00538 -0.0645,-0.01344 -0.09675,-0.01881c-0.94062,-0.17469 -1.87856,0.16662 -2.49937,0.87881c-0.62081,0.71219 -0.82238,1.69581 -0.53213,2.59613c3.17663,9.804 11.15044,17.12206 20.87919,19.70475c-8.07056,4.75956 -17.20269,7.24819 -26.75944,7.24819c-2.11237,0 -4.20056,-0.12363 -6.20275,-0.36819c-1.25506,-0.15856 -2.43487,0.58588 -2.85681,1.76569c-0.42194,1.1825 0.03225,2.50206 1.09381,3.17394c13.01556,8.23987 28.02794,12.59362 43.41656,12.59362c50.44975,0 80.59544,-40.63231 80.59544,-79.9155c0,-0.72831 -0.01344,-1.45394 -0.03763,-2.17687c5.12506,-3.82431 9.546,-8.48981 13.158,-13.89169c0.66381,-0.99438 0.59125,-2.30588 -0.17737,-3.22231zM137.51131,56.82181c-0.74981,0.52944 -1.17713,1.40556 -1.13412,2.32469c0.05375,1.11531 0.09137,2.24137 0.09137,3.3755c0,36.63869 -28.13544,74.5405 -75.22044,74.5405c-10.70162,0 -21.21512,-2.2575 -30.90356,-6.58975c11.35738,-0.86269 22.03213,-4.97188 31.10781,-12.00775c0.90031,-0.69875 1.26313,-1.88662 0.903,-2.967c-0.36013,-1.08037 -1.35988,-1.81944 -2.49938,-1.84362c-9.08644,-0.17469 -17.21075,-5.246 -21.36025,-12.99406c2.99656,0.10213 5.92056,-0.26606 8.80425,-1.05619c1.20131,-0.33056 2.01831,-1.44319 1.97531,-2.6875c-0.04569,-1.247 -0.94063,-2.29512 -2.16075,-2.53969c-10.13994,-2.021 -17.8235,-10.13994 -19.46825,-20.01919c3.01537,1.08306 6.17319,1.69581 9.32025,1.79256c1.23356,0.02956 2.279,-0.72831 2.64181,-1.8705c0.3655,-1.14487 -0.07256,-2.39187 -1.07231,-3.05569c-6.87463,-4.56338 -10.97575,-12.17438 -10.97575,-20.35781c0,-3.05031 0.56438,-6.04687 1.65012,-8.83381c14.29481,15.66006 34.357,25.15769 55.66888,26.23c0.8815,0.05912 1.65819,-0.31175 2.19569,-0.95944c0.54287,-0.64769 0.74712,-1.51306 0.55631,-2.33275c-0.43,-1.84094 -0.645,-3.7195 -0.645,-5.58194c0,-13.4805 11.07787,-24.44819 24.69544,-24.44819c6.81819,0 13.38106,2.81381 18.00625,7.71581c0.63156,0.6665 1.56144,0.96481 2.46444,0.7955c3.72219,-0.71756 7.36106,-1.80331 10.879,-3.24919c-1.95919,2.70631 -4.47469,5.01219 -7.41481,6.75637c-1.09381,0.65038 -1.58294,1.97531 -1.17175,3.182c0.41119,1.20131 1.60444,1.96188 2.87025,1.79794c2.5585,-0.31444 5.06863,-0.78475 7.51694,-1.41094c-2.23331,2.32469 -4.67894,4.429 -7.32075,6.29412z"
+                                        fill="url(#color-4_bYzsf9Bmocst_gr4)"></path>
+                                    <path
+                                        d="M82.69975,123.04988l1.66894,5.10625c19.14306,-6.25113 34.4645,-21.26888 42.03788,-41.19938l-5.02294,-1.91081c-4.11187,10.81987 -14.60119,30.13763 -38.68387,38.00394z"
+                                        fill="url(#color-5_bYzsf9Bmocst_gr5)"></path>
+                                    <g fill="url(#color-6_bYzsf9Bmocst_gr6)">
+                                        <circle cx="42" cy="20" transform="scale(2.6875,2.6875)" r="2"></circle>
+                                    </g>
+                                </g>
+                                <path d="" fill="none" stroke="none" stroke-linejoin="miter"></path>
+                                <path d="" fill="none" stroke="none" stroke-linejoin="miter"></path>
+                            </g>
+                        </g>
+                    </svg>
+                </a>
+            </div>
             <p class="copy img-fluid">&copy; Made By: Stav Tamam</p>
         </footer>
         <br>
