im fucking done with this project

--- a/mardi gras project/index.html
+++ b/mardi gras project/index.html
@@ -85,30 +85,30 @@
         <div class="sponsers flex wrap center">
             <a href="https://www.marriott.com/hotels/travel/msyis-sheraton-new-orleans-hotel/?scid=45f93f1b-bd77-45c9-8dab-83b6a417f6fe"
                 target="_blank">
-                <img src="css/images/sheraton.jpg" alt="sheraton hotel" class="spons img-fluid w-20 wow rotateIn">
+                <img src="css/images/sheraton.jpg" alt="sheraton hotel" class="spons img-fluid wow rotateIn">
             </a>
             <a href="https://www.lcm.org/" target="_blank">
-                <img src="css/images/lcm.jpg" alt="lcm hotel" class="spons img-fluid w-20 wow rotateIn">
+                <img src="css/images/lcm.jpg" alt="lcm hotel" class="spons img-fluid wow rotateIn">
             </a>
             <a href="http://www.museumofdeath.net/" target="_blank">
-                <img src="css/images/museum.jpg" alt="museum of death" class="spons img-fluid w-20 wow rotateIn"><br>
+                <img src="css/images/museum.jpg" alt="museum of death" class="spons img-fluid wow rotateIn"><br>
             </a>
             <a href="https://thehauntedmuseum.com/" target="_blank">
-                <img src="css/images/museum2.jpg" alt="museum2" class="spons img-fluid w-20 wow rotateIn">
+                <img src="css/images/museum2.jpg" alt="museum2" class="spons img-fluid wow rotateIn">
             </a>
             <a href="https://www.premiumparking.com/P402" target="_blank">
-                <img src="css/images/parking.jpg" alt="parking" class="spons img-fluid w-20 wow rotateIn">
+                <img src="css/images/parking.jpg" alt="parking" class="spons img-fluid wow rotateIn">
             </a>
             <a href="https://www.ritzcarlton.com/en/hotels/new-orleans?scid=bb1a189a-fec3-4d19-a255-54ba596febe2"
                 target="_blank">
-                <img src="css/images/ritz.png" alt="ritz hotel" class="spons img-fluid w-20 wow rotateIn">
+                <img src="css/images/ritz.png" alt="ritz hotel" class="spons img-fluid wow rotateIn">
             </a>
             <a href="https://www.tripadvisor.com/LocationPhotoDirectLink-g55786-d17333811-i448532522-Walk_On_s_Sports_Bistreaux-Edinburg_Texas.html"
                 target="_blank">
-                <img src="css/images/walkons.jpg" alt="walk ons" class="spons img-fluid w-20 wow rotateIn">
+                <img src="css/images/walkons.jpg" alt="walk ons" class="spons img-fluid wow rotateIn">
             </a>
             <a href="https://www.acehotel.com/neworleans/" target="_blank">
-                <img src="css/images/acehotel.png" alt="ace hotel" class="spons img-fluid w-20 wow rotateIn">
+                <img src="css/images/acehotel.png" alt="ace hotel" class="spons img-fluid wow rotateIn">
             </a>
         </div> <br><br>
         <br>
