--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <body>
     <a href="mardi gras project/index.html">Mardi Gras Project</a>
+    <a href="to do list/todolist.html">To Do List</a>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
