another project home work grout calculation

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <a href="mardi gras project/index.html">Mardi Gras Project</a>
     <a href="to do list/todolist.html">To Do List</a>
+    <a href="Grout Calculation/hw.html">Grout Calculation</a>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
