--- a/to do list/todolist.html
+++ b/to do list/todolist.html
@@ -19,7 +19,11 @@
         <h2>Completed:</h2>
         <ul class="completed"></ul>
     </div>
-    <script src="todolist.js"></script>
+    </script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous">
+    </script>
+    <script src="todo.js"></script>
 </body>
 
 </html>
