--- a/Grout Calculation/hw.html
+++ b/Grout Calculation/hw.html
@@ -52,7 +52,7 @@
 <body>
     <div>
         <form action="">
-            <h1>Grout Claculation</h1>
+            <h1>Grout Calculation</h1>
             <label for="">Area in SM</label><br>
             <input id="inp1" type="number"><br><br>
             <label for="">Gap Width:</label><br>
