--- a/Grout Calculation/hw.html
+++ b/Grout Calculation/hw.html
@@ -12,15 +12,19 @@
     <style>
         body {
             /* direction: rtl; */
-            background-color: red;
+            background-color: white;
+            background-image: url("shaish3.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
             color: white;
         }
 
         div {
-            background-color: black;
+            background-color: rgba(0, 0, 0, 0.877);
             color: white;
-            margin: 5% auto;
-            border: 2px solid darkred;
+            margin: 10% auto;
+            border: 8px double black;
+            border: 9px double white;
             border-radius: 3%;
             width: 450px;
             height: 400px;
