--- a/Grout Calculation/hw.html
+++ b/Grout Calculation/hw.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Holtwood+One+SC&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Suez+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <title>HW</title>
@@ -40,8 +40,9 @@
         select,
         input,
         label,
-        span {
-            font-family: 'Suez One', serif;
+        span,
+        option {
+            font-family: 'Open Sans Condensed', sans-serif;
             font-size: 1em;
         }
 
