--- a/Grout Calculation/hw.html
+++ b/Grout Calculation/hw.html
@@ -51,6 +51,15 @@
             left: 50%;
             font-size: 2em;
         }
+
+        input,
+        select {
+            border-radius: 0.5em;
+        }
+
+        #result {
+            font-size: 1.5em;
+        }
     </style>
 </head>
 
