--- a/Grout Calculation/hw.html
+++ b/Grout Calculation/hw.html
@@ -102,7 +102,7 @@
                                 res = v;
                                 console.log(res)
 
-                                printRes(inputVal * v + " Grout");
+                                printRes(inputVal * v + " kg");
 
                             }
                         })
