--- a/Grout Calculation/hw.html
+++ b/Grout Calculation/hw.html
@@ -16,6 +16,7 @@
             background-image: url("shaish3.jpg");
             background-repeat: no-repeat;
             background-size: cover;
+            width: 99%;
             color: white;
         }
 
@@ -59,6 +60,12 @@
 
         #result {
             font-size: 1.5em;
+        }
+
+        @media only screen and (max-width: 1145px) {
+            body {
+                height: 100vh;
+            }
         }
     </style>
 </head>
