--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 </head>
 
 <body>
-    <a href="mardi gras project/index.html">Mardi Gras Project</a>
-    <a href="to do list/todolist.html">To Do List</a>
-    <a href="Grout Calculation/hw.html">Grout Calculation</a>
+    <a href="mardi gras project/index.html">Mardi Gras Project</a><br>
+    <a href="to do list/todolist.html">To Do List</a><br>
+    <a href="Grout Calculation/hw.html">Grout Calculation</a><br>
+    <a href="birthday/datepicker.html">Birthday count down</a><br>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
