--- a/birthday/datepicker.html
+++ b/birthday/datepicker.html
@@ -44,7 +44,7 @@
             color: peachpuff;
         }
 
-        .div {
+        .sss {
             text-align: center;
             width: 600px;
             height: 300px;
@@ -55,7 +55,7 @@
         }
 
         @media only screen and (max-width: 700px) {
-            .div {
+            .sss {
                 width: 360px;
                 height: 300px;
             }
@@ -74,7 +74,7 @@
 
 <body>
     <p class="p">When Is Your Birthday:</p>
-    <div class="div">
+    <div class="sss">
         <br><input type="text" id="datepicker">
         <button onclick="calculate()" class="btn">Check</button><br>
         <span class="span"></span>
