--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a href="to do list/todolist.html">To Do List</a><br>
     <a href="Grout Calculation/hw.html">Grout Calculation</a><br>
     <a href="birthday/datepicker.html">Birthday count down</a><br>
-    <a href="form validation/indexTasks1.php">Form Validation</a><br>
+    <a href="https://bendor.tk/stav/indextasks1.php">Form Validation</a><br>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
