adding angular app

--- a/to do list/todolist.html
+++ b/to do list/todolist.html
@@ -15,15 +15,15 @@
         <input type="text" class="title" placeholder="Write Something..."><br><br>
         <button onclick="help.addtask()" class="add">Add</button><br>
         <h2>To Do:</h2>
-        <ul class="todo"></ul><br><br>
+        <ul id="todo" class="todo"></ul><br><br>
         <h2>Completed:</h2>
         <ul class="completed"></ul>
     </div>
     </script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous">
-    </script>
-    <script src="todo.js"></script>
+        </script>
+    <script src="todolist.js"></script>
 </body>
 
 </html>
